--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 NODE_ENV= development
 PORT=5000
-DATABASE_URL=mongodb+srv://L2PRACTICE:M21Wl2Txnr51b3Lp@cluster0.uinjrty.mongodb.net/first-project?retryWrites=true&w=majority&appName=Cluster0
-BCRYPT_SALT_ROUNDS=12
+DATABASE_URL= mongodb+srv://assigment2:FU5SRQION4aD9mhV@cluster0.raemxbz.mongodb.net/assigment2?retryWrites=true&w=majority&appName=Cluster0
